<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/TextViewCondition"
            android:text="@string/condition_1"/>

        <TextView
            style="@style/TextViewCondition"
            android:text="@string/condition_2"/>

        <TextView
            style="@style/TextViewCondition"
            android:text="@string/condition_3"/>

        <TextView
            style="@style/TextViewCondition"
            android:text="@string/condition_4"/>

        <TextView
            style="@style/TextViewCondition"
            android:text="@string/condition_5"/>

        <TextView
            style="@style/TextViewCondition"
            android:text="@string/condition_6"/>

        <TextView
            style="@style/TextViewCondition"
            android:text="@string/condition_7"/>

        <TextView
            style="@style/TextViewCondition"
            android:text="@string/condition_8"/>

        <TextView
            style="@style/TextViewCondition"
            android:text="@string/condition_9"/>

        <TextView
            style="@style/TextViewCondition"
            android:text="@string/condition_10"/>

        <TextView
            style="@style/TextViewCondition"
            android:text="@string/condition_11"/>

        <TextView
            style="@style/TextViewCondition"
            android:text="@string/condition_12"/>

        <TextView
            style="@style/TextViewCondition"
            android:text="@string/condition_13"/>

        <TextView
            style="@style/TextViewCondition"
            android:text="@string/condition_14"/>

        <TextView
            style="@style/TextViewCondition"
            android:text="@string/condition_15"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>